spade-tests/src/snapshots/spade_tests__integration__overwriting_stdlib_gives_useful_error.snap
---
source: spade-tests/src/integration.rs
---
enum Option<T> {}

error: Multiple items with the same name
  ┌─ testinput:1:6
  │
1 │ enum Option<T> {}
  │      ^^^^^^ Option is defined multiple times
  │
  ┌─ <compiler dir>/stdlib/prelude.spade:4:9
  │
4 │ pub use std::option::Option;
  │         ------------------- Previous definition here
