spade-tests/src/snapshots/spade_tests__integration__pipeline_method_calls_pass_parameters_correctly.snap
---
source: spade-tests/src/integration.rs
expression: "items.iter().map(| item | format! (\"{item}\")).join(\"\\n\")"
---
entity \test ((clk, clk_n108, bool)) -> () {
	const e8: uint<8> = 2
	let e7: {x: uint<8>} = ConstructTuple(e8)
	const e10: uint<16> = 3
	let e6: () = Instance(\impl#0::a )(e7, clk_n108, e10)
} => e6
entity \impl#0::a ((self, self_n105, {x: uint<8>}), (clk, clk_n106, bool), (val, val_n107, uint<16>)) -> () {
	reg(clk_n106) s1_self_n534: {x: uint<8>} = self_n105
	reg(clk_n106) s1_val_n535: uint<16> = val_n107
	reg(clk_n106) s2_self_n536: {x: uint<8>} = s1_self_n534
	reg(clk_n106) s2_val_n537: uint<16> = s1_val_n535
	reg(clk_n106) s3_self_n538: {x: uint<8>} = s2_self_n536
	reg(clk_n106) s3_val_n539: uint<16> = s2_val_n537
	let e3: () = Nop()
} => e3
