spade-tests/src/snapshots/spade_tests__integration__type_alias_impl_target_generic_both.snap
---
source: spade-tests/src/integration.rs
---
struct A<#bool B> {}

type B<#bool B> = A<B>;

impl B<true> { }


error: Impl on type alias is currently not supported
  ┌─ testinput:5:6
  │
3 │ type B<#bool B> = A<B>;
  │ ----------------------- B defined here
4 │ 
5 │ impl B<true> { }
  │      ^ Type alias as impl target
