spade-tests/src/snapshots/spade_tests__integration__wire_read_requires_dereference.snap
---
source: spade-tests/src/integration.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Type error
  ┌─ testinput:1:28
  │  
1 │   entity x(a: &bool) -> bool {
  │                         ---- bool type specified here
  │ ╭────────────────────────────^
2 │ │     a
3 │ │ }
  │ ╰─^ Found type &bool
  │  
  = Expected: bool
  =      Got: &bool


